--- a/happen/www/index.html
+++ b/happen/www/index.html
@@ -22,11 +22,11 @@
         <meta charset="utf-8" />
         <meta name="format-detection" content="telephone=no" />
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=medium-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <title>Hello World</title>
     </head>
-    <body>
+    <body onload="loaded()">
 <!--         <div class="app">
             <h1>Happen</h1>
             <div id="deviceready" class="blink">
@@ -35,6 +35,7 @@
             </div>
         </div> -->
             <div class="nav-bar"></div>
+						<div id="wrapper">
             <div class="main">
                 <div class="news-item">
                     <a class="news-photo"></a>
@@ -93,11 +94,22 @@
                     </div>
                 </div>
             </div>
+            </div>
             <div class="tab-bar"></div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript" src="js/iscroll-lite.js"></script>
         <script type="text/javascript">
             app.initialize();
+        </script>
+        <script type="text/javascript">
+				var myScroll;
+
+				function loaded () {
+					myScroll = new IScroll('#wrapper', { scrollX: true, freeScroll: true });
+					}
+
+					document.addEventListener('touchmove', function (e) { e.preventDefault(); }, false);
         </script>
     </body>
 </html>
