added top nav bar

--- a/happen/platforms/android/assets/www/index.html
+++ b/happen/platforms/android/assets/www/index.html
@@ -35,7 +35,28 @@
                 <p class="event received">Device is Ready</p>
             </div>
         </div> -->
-            <div class="nav-bar"></div>
+            <div class="nav-bar">
+                <div class="nav-item">&nbsp;</div>
+                <div class="nav-center">
+                    <table height="100%" align="center"><tr valign="middle"><td>
+                    <div id="nav-left">
+                    <table height="100%" align="center"><tr valign="middle"><td>
+                    Friends
+                    </td></tr></table>
+                    </div>
+                    <div id="nav-right">
+                    <table height="100%" align="center"><tr valign="middle"><td>
+                    Me Too
+                    </td></tr></table>
+                    </div>
+                    </td></tr></table>
+                </div>
+                <div class="nav-item">
+                    <table height="100%" align="right" style="margin-right:10px"><tr valign="middle"><td>
+                    +
+                    </td></tr></table>
+                </div>
+            </div>
 						<div id="wrapper">
             <div class="main">
                 <div class="news-item">
